# RustHost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RustHost_HTTPS_Simplified.md  SETUP.md  audit.toml  build.rs  deny.toml  rusthost_implementation_plan.docx  rusthost_implementation_plan.md
.codex/environments/: environment.toml
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
docs/: FILE_TREE.md  arti-migration-guide.md  feature-expansion-plan.md  generate-static-stress-site.sh  rusthost_audit-askforrepeatafterfixesareapplied.md
src/: error.rs  lib.rs  main.rs  path_display.rs  terminal.rs  version.rs  windows_identity.rs
src/config/: defaults.rs  loader.rs  mod.rs
src/console/: dashboard.rs  input.rs  mod.rs  ui.rs
src/console/menu/: diagnostics.rs  doctor.rs  help.rs  mod.rs  network.rs  pages.rs  render.rs  settings.rs  site.rs  state.rs  tor.rs
src/logging/: mod.rs
src/runtime/: events.rs  lifecycle.rs  mod.rs  state.rs
src/runtime/lifecycle/: support.rs
src/server/: admission.rs  fallback.rs  handler.rs  mime.rs  mod.rs  redirect.rs
src/server/handler/: encoding.rs  pathing.rs
src/tls/: acme.rs  mod.rs  self_signed.rs
src/tor/: fs.rs  mod.rs  torrc.rs
tests/: html_stress.rs  http_integration.rs
tests/fixtures/html_stress/: index.html
tests/fixtures/html_stress/gallery/: thumb-a.txt  thumb-b.txt
tests/fixtures/html_stress/pages/: about.html  huge.html  space name.html
tests/fixtures/html_stress/pages/nested/: index.html
tests/fixtures/html_stress/scripts/: app.js
tests/fixtures/html_stress/styles/: app.css
tests/support/: mod.rs
