[package]
name        = "rusthost"
version     = "0.1.0"
edition     = "2021"
# Bumped from 1.86 → 1.90 to match the highest MSRV in the transitive dep tree:
#   arti-client 0.40 and most tor-* crates require 1.89
#   typed-index-collections 3.5 (via tor-netdir) requires 1.90
rust-version = "1.90"
description = "Single-binary, zero-setup static site hosting appliance with Tor support"
license     = "MIT"
authors     = []

[lib]
name = "rusthost"
path = "src/lib.rs"

[[bin]]
name = "rusthost-cli"
path = "src/main.rs"

# ─── Lint configuration ───────────────────────────────────────────────────────
#
# clippy::all     — every lint in the default set (correctness + style + perf)
# clippy::pedantic — stricter style + API lints; individual allows used where
#                    the rule conflicts with the module's documented design
#                    (e.g. too_many_arguments for the HTTP write_* stack which
#                    must mirror the HTTP/1.1 wire format).
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "deny",  priority = -1 }
pedantic = { level = "deny",  priority = -1 }
# nursery lints warn but do not gate CI; they surface improvement candidates.
nursery  = { level = "warn",  priority = -1 }

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "fs",
    "sync",
    "time",
    "macros",
    "signal",
] }

arti-client = { version = "0.40", features = [
    "tokio",
    "native-tls",
    "onion-service-service",
] }
tor-hsservice = { version = "0.40" }
tor-cell      = { version = "0.40" }
futures       = "0.3"

sha3         = "0.10"
data-encoding = "2"
thiserror    = "1"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
log          = "0.4"
crossterm    = "0.27"
chrono       = { version = "0.4", features = ["clock"] }
# OS error codes used in the accept-loop backoff to distinguish EMFILE/ENFILE
# (resource exhaustion → log error) from transient errors (log debug).
libc         = "0.2"
# Vendor OpenSSL source so the binary builds without system libssl-dev headers
# on Linux.  native-tls (pulled transitively through arti-client → tor-rtcompat)
# links against OpenSSL on Linux; without this feature flag the build fails on
# any machine that lacks the -dev package.  macOS and Windows are unaffected
# (they use Security.framework and SChannel respectively), but the `vendored`
# feature is a no-op on those targets so there is no downside to enabling it
# unconditionally.  Build-time cost is ~60 s on first compile; subsequent
# incremental builds are fast because the OpenSSL objects are cached.
openssl      = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto        = true
strip      = true
